--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </section>
 
 
-<section class="Lorem-3">
+<section class="Lorem-3 ">
     <div class="taxt-box2">
     <h1>No More Homeless,<br>
         No More Hunger</h1>
@@ -124,7 +124,7 @@
 
 </section>
 
-<section class="Lorem-5">
+<section class="Lorem-5 hide">
     <div class="taxt-box4">
         <h1>Get My Updates</h1>
         <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
@@ -134,16 +134,7 @@
 
 </section>
 
-<section class="Lorem-6">
 
-    <div class="last-button">
-        <div class="labele">
-        <label for="Name"> Name </label>
-        <input type="text" placeholder="name">
-    </div>
-    </div>
-
-</section>
 
 <section class="Lorem-7">
     <h1>Be Humble</h1>
